--- a/public/latest/assets/admin-css/message.css
+++ b/public/latest/assets/admin-css/message.css
@@ -4,12 +4,13 @@
   background-color: #fff;
   display: grid;
   grid-template-columns: 31.5% 68.5%;
+  min-height: 75vh;
 }
 .message-list-page-wrap .messages-box .chat-person-list-box {
   border-right: 1px solid var(--neutral-40, #C5CCD8);
   background: var(--white, #FFF);
   border-radius: 0.5rem 0 0 0.5rem;
-  max-height: 90vh;
+  max-height: 82vh;
   overflow-y: hidden;
 }
 .message-list-page-wrap .messages-box .chat-person-list-box .title {
@@ -153,12 +154,14 @@
   padding: 2.5rem 2rem 2rem 2rem;
   flex-direction: column;
   gap: 2rem;
-  flex: 1 0 0;
-  align-self: stretch;
-  max-height: 40rem;
-  overflow-y: scroll;
-  padding-top: 8rem;
-  padding-bottom: 4rem;
+  min-height: 70vh;
+  max-height: 70vh;
+  overflow-y: auto;
+  margin-top: 5rem;
+  margin-bottom: 8rem;
+}
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item:nth-child(2) {
+  margin-top: auto;
 }
 .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item {
   max-width: 90%;
@@ -330,9 +333,11 @@
 }
 .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room::-webkit-scrollbar-track {
   background: #f1f1f1;
+  border-radius: 1rem;
 }
 .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room::-webkit-scrollbar-thumb {
   background: #888;
+  border-radius: 1rem;
 }
 .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room::-webkit-scrollbar-thumb:hover {
   background: #555;
@@ -460,6 +465,10 @@
   font-size: 8px;
   margin-right: 0.5rem;
 }
+.chat-room-head .media .name span.offline {
+  color: #66768E;
+  background: rgba(102, 118, 142, 0.2784313725);
+}
 .chat-room-head .media p {
   color: var(--neutral-60, #66768E);
   font-size: 0.875rem;
@@ -479,10 +488,12 @@
 
 .person-tab-body::-webkit-scrollbar-track {
   background: #f1f1f1;
+  border-radius: 1rem;
 }
 
 .person-tab-body::-webkit-scrollbar-thumb {
   background: #888;
+  border-radius: 1rem;
 }
 
 .person-tab-body::-webkit-scrollbar-thumb:hover {
@@ -614,26 +625,95 @@
   background: #F1F4F9;
 }
 
+.person-tab-body.chat-user-load.active {
+  display: none !important;
+}
+
 .create-group-form::-webkit-scrollbar {
   width: 6px;
 }
 
 .create-group-form::-webkit-scrollbar-track {
   background: #f1f1f1;
+  border-radius: 1rem;
 }
 
 .create-group-form::-webkit-scrollbar-thumb {
   background: #888;
+  border-radius: 1rem;
 }
 
 .create-group-form::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
 
+.blank-chat-page {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+}
+.blank-chat-page i {
+  font-size: 3rem;
+  color: #294CFF;
+}
+.blank-chat-page h3 {
+  color: var(--neutral-90, #101C2D);
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.75rem;
+  margin-top: 1rem;
+}
+
+.message-attached {
+  cursor: pointer;
+  margin-right: 0.5rem;
+}
+.message-attached i {
+  color: #475467;
+}
+
+.file-preview {
+  position: absolute;
+  right: 34px;
+  top: -49px;
+  z-index: 99;
+  display: none;
+}
+.file-preview img {
+  width: 6rem;
+  height: 4.1rem;
+  -o-object-fit: contain;
+     object-fit: contain;
+  border-radius: 6px;
+  border: 1px solid #294CFF;
+}
+.file-preview .preview-actions {
+  margin-left: -8px;
+  background: #ED5763;
+  height: 1.1rem;
+  width: 1.1rem;
+  border-radius: 4px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
+  cursor: pointer;
+  color: #fff;
+}
+
+.close-icon {
+  display: none;
+}
+
 .create-group-form {
   padding: 1.5em;
-  max-height: 20rem;
+  max-height: 96vh;
   overflow-y: scroll;
+  padding-bottom: 17rem;
 }
 .create-group-form h4 {
   color: var(--neutral-90, #101C2D);
@@ -777,6 +857,23 @@
   color: #294CFF;
 }
 
+.header-filter.active {
+  display: none !important;
+}
+
+.chat-person-list-box {
+  position: relative;
+}
+
+.form-group-submit {
+  position: absolute;
+  left: 5%;
+  bottom: 2%;
+  width: 90%;
+  transition: none;
+  background-color: #fff;
+}
+
 .group-room-header .peoples {
   display: flex;
   align-items: center;
@@ -864,7 +961,7 @@
 
 .chat-main-body-box {
   position: relative;
-  max-height: 90vh;
+  max-height: 82vh;
   overflow-y: hidden;
 }
 
@@ -1009,6 +1106,12 @@
 }
 
 @media (min-width: 320px) and (max-width: 574px) {
+  .message-list-page-wrap .messages-box .chat-person-list-box .header-filter .chat-filter .dropdown .btn {
+    font-size: 1rem;
+  }
+  .message-list-page-wrap .messages-box .chat-person-list-box .header-filter .chat-filter .dropdown .btn img {
+    display: none !important;
+  }
   .message-list-page-wrap .messages-box {
     grid-template-columns: 100%;
   }
@@ -1016,7 +1119,8 @@
     padding: 0.8rem;
   }
   .chat-room-head {
-    display: none !important;
+    padding: 1rem;
+    border-top: 1px solid #1D2939;
   }
   .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room {
     padding: 0.8rem;
@@ -1025,6 +1129,21 @@
     margin-bottom: 0.2rem;
     padding: 0.6rem;
     font-size: 12px;
+  }
+  .chat-room-head .media .view-bttn {
+    display: none;
+  }
+  .chat-room-head .media img {
+    width: 2.5rem;
+    height: 2.5rem;
+    margin-right: 0.5rem;
+  }
+  .chat-room-head .media .name {
+    font-size: 1rem;
+  }
+  .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room {
+    min-height: 65vh;
+    max-height: 65vh;
   }
 }
 @media (min-width: 574px) and (max-width: 767px) {
@@ -1035,7 +1154,8 @@
     padding: 0.8rem;
   }
   .chat-room-head {
-    display: none !important;
+    padding: 1rem;
+    border-top: 1px solid #1D2939;
   }
   .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room {
     padding: 0.8rem;
@@ -1044,5 +1164,54 @@
     margin-bottom: 0.2rem;
     padding: 0.6rem;
     font-size: 12px;
+  }
+  .chat-room-head .media .view-bttn {
+    display: none;
+  }
+  .chat-room-head .media img {
+    width: 2.5rem;
+    height: 2.5rem;
+    margin-right: 0.5rem;
+  }
+  .chat-room-head .media .name {
+    font-size: 1rem;
+  }
+  .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room {
+    min-height: 65vh;
+    max-height: 65vh;
+  }
+  .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room {
+    padding: 0.8rem;
+  }
+  .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .chat-messages-box .message-item {
+    margin-bottom: 0.2rem;
+    padding: 0.6rem;
+    font-size: 12px;
+  }
+}
+@media (min-width: 767px) and (max-width: 992px) {
+  .message-list-page-wrap .messages-box .chat-person-list-box .header-filter .chat-filter .dropdown .btn img {
+    display: none !important;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .message-list-page-wrap .messages-box .chat-person-list-box .header-filter .chat-filter .dropdown .btn img {
+    display: none !important;
+  }
+  .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room {
+    min-height: 65vh;
+    max-height: 65vh;
+  }
+}
+@media (min-width: 1199px) and (max-width: 1399px) {
+  .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room {
+    min-height: 65vh;
+    max-height: 60vh;
+  }
+}
+@media (min-width: 1199px) and (max-width: 1999px) {
+  .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room {
+    min-height: 62vh;
+    max-height: 62vh;
   }
 }
