admin instructor payments

--- a/public/latest/assets/admin-css/elearning.css
+++ b/public/latest/assets/admin-css/elearning.css
@@ -115,6 +115,23 @@
   text-decoration: line-through;
 }
 
+span.avatar-big-box {
+  border-radius: 6.25rem;
+  border: 4px solid var(--neutral-10, #FFF);
+  width: 8.75rem;
+  height: 8.75rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-right: 2rem;
+  font-size: 3.5rem;
+  background-color: #E0E0E0;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  color: #294CFF;
+  margin: 1rem 0;
+}
+
 .vimeo-player {
   position: relative;
   padding-bottom: 56.25%;
