--- a/scss/user.scss
+++ b/scss/user.scss
@@ -464,6 +464,12 @@
                 line-height: 1.25rem;
                 margin-bottom: 0.4rem;
             }
+            .pass-icon{
+                position: absolute;
+                right: 1.5rem;
+                top: 47px;
+                cursor: pointer;
+            }
 
             .form-control {
                 border-radius: 0.375rem;
@@ -475,7 +481,6 @@
                 font-style: normal;
                 font-weight: 400;
                 line-height: 1.25rem;
-                /* 142.857% */
             }
 
             textarea {
