--- a/public/latest/assets/admin-css/message.css
+++ b/public/latest/assets/admin-css/message.css
@@ -625,6 +625,25 @@
   background: #F1F4F9;
 }
 
+span.user-name-avatar {
+  border-radius: 6.25rem;
+  border: 2px solid var(--neutral-10, #FFF);
+  width: 2.5rem;
+  height: 2.5rem;
+  -o-object-fit: cover;
+  object-fit: cover;
+  font-size: 1rem;
+  background-color: #E0E0E0;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  color: #294CFF;
+}
+
+.person-tab-body .single-person.active .media {
+  background: #EDEFFC !important;
+}
+
 .person-tab-body.chat-user-load.active {
   display: none !important;
 }
