--- a/scss/message.scss
+++ b/scss/message.scss
@@ -625,6 +625,7 @@
         padding: 1rem 2rem;
         padding-right: 1rem;
         transition: ease-in-out .3s;
+        cursor: pointer;
 
         &:hover {
             background: #EDEFFC;
