--- a/public/latest/assets/admin-css/test.css
+++ b/public/latest/assets/admin-css/test.css
@@ -153,6 +153,9 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  height: 100%;
+  min-height: 70vh;
+  max-height: 70vh;
 }
 .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room {
   display: flex;
@@ -165,7 +168,7 @@
   margin-top: 5rem;
   margin-bottom: 8rem;
 }
-.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item:nth-child(2) {
+.message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item:nth-child(3) {
   margin-top: auto;
 }
 .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .message-item {
@@ -698,7 +701,7 @@ span.user-name-avatar {
   margin-right: 0.5rem;
 }
 .message-attached i {
-  color: #475467;
+  color: #66768E;
 }
 
 .file-preview {
