--- a/scss/test.scss
+++ b/scss/test.scss
@@ -195,7 +195,13 @@
                 display: flex;
                 flex-direction: column;
                 gap: 2rem; 
+                height: 100%;
+                min-height: 70vh;
+                max-height: 70vh;
             }
+
+         
+
             .main-chat-room {
                 display: flex;
                 padding: 2.5rem 2rem 2rem 2rem;
@@ -206,8 +212,8 @@
                 overflow-y: auto;
                 margin-top: 5rem;
                 margin-bottom: 8rem;
-
-                .message-item:nth-child(2) {
+ 
+                .message-item:nth-child(3) {
                     margin-top: auto;
                 }
 
@@ -811,7 +817,7 @@ span.user-name-avatar{
     margin-right: 0.5rem;
 
     i {
-        color: #475467;
+        color: #66768E;
     }
 }
 
