--- a/scss/test.scss
+++ b/scss/test.scss
@@ -196,22 +196,26 @@
                 flex-direction: column;
                 gap: 2rem; 
                 height: 100%;
-                min-height: 70vh;
-                max-height: 70vh;
+                min-height: 42vh;
+                max-height: 42vh; 
             }
 
-         
+            .single-chat-image{
+                img{
+                    max-width: 200px;
+                }
+            }
 
             .main-chat-room {
                 display: flex;
                 padding: 2.5rem 2rem 2rem 2rem;
                 flex-direction: column;
                 gap: 2rem;
-                min-height: 70vh;
-                max-height: 70vh;
+                min-height: 50vh;
+                max-height: 50vh;
                 overflow-y: auto;
                 margin-top: 5rem;
-                margin-bottom: 8rem;
+                // margin-bottom: 18rem;
  
                 .message-item:nth-child(3) {
                     margin-top: auto;
@@ -1502,8 +1506,8 @@ span.user-name-avatar{
 @include q.responsive(large) {
 
     .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room {
-        min-height: 62vh;
-        max-height: 62vh; 
+        min-height: 58vh;
+        max-height: 58vh; 
     }
 
 }
