--- a/public/latest/assets/admin-css/admin-dark.css
+++ b/public/latest/assets/admin-css/admin-dark.css
@@ -196,6 +196,9 @@
 .dark-mode .form-submit-bttns .btn-submit:hover {
   color: #fff !important;
 }
+.dark-mode .form-submit-bttns .btn-cancel a{
+  color: #2F3A4C!important ;
+}
 .dark-mode .form-submit-bttns .btn-cancel {
   border: 1px solid #313A49 !important;
   background: #0D0D0D !important;
