--- a/public/latest/assets/admin-css/user.css
+++ b/public/latest/assets/admin-css/user.css
@@ -77,6 +77,7 @@
   padding: 1rem 2rem 2.5rem;
   text-align: center;
   margin-bottom: 2rem;
+  max-height: 270px!important;
 }
 
 .user-grid-box .btn-ellipse {
