--- a/public/latest/assets/admin-css/elearning.css
+++ b/public/latest/assets/admin-css/elearning.css
@@ -864,6 +864,7 @@ span.finsihLesson {
   box-shadow: 0px 1px 2px 0px rgba(145, 158, 171, 0.16);
   padding: 1.5rem;
   margin-bottom: 1.5rem;
+  cursor: move;
 }
 .course-with-page .course-content-box.course-page-box {
   border: 0;
