--- a/public/latest/assets/admin-css/elearning.css
+++ b/public/latest/assets/admin-css/elearning.css
@@ -58,8 +58,8 @@
   display: block !important;
 }
 .course-single-item .course-txt-box {
-  padding: 0.5rem;
   padding-top: 0.75rem;
+  padding: 0.5rem;
   padding-bottom: 0;
 }
 .course-single-item .course-txt-box ul {
@@ -864,7 +864,6 @@ span.finsihLesson {
   box-shadow: 0px 1px 2px 0px rgba(145, 158, 171, 0.16);
   padding: 1.5rem;
   margin-bottom: 1.5rem;
-  cursor: move;
 }
 .course-with-page .course-content-box.course-page-box {
   border: 0;
@@ -930,8 +929,7 @@ span.finsihLesson {
   font-weight: 600;
   line-height: 1.25rem;
   display: block;
-  margin-bottom: 0.75rem!important;
-  display: block;
+  margin-bottom: 0.75rem;
 }
 .lesson-edit-form-wrap .form-upload #upload-box {
   display: flex;
@@ -967,7 +965,6 @@ span.finsihLesson {
   border: 0;
   border-bottom: 1px solid #EBEFF2;
   margin: 0;
-  margin-top: 1rem;
 }
 .lesson-edit-form-wrap .course-page-edit-box .dropdown span {
   display: inline-block;
@@ -2773,29 +2770,3 @@ span.stripe-bg i {
     width: 100%;
   }
 }
-
- .bootstrap-tagsinput{
-  border-radius: 0.5rem;
-  border: 1px solid var(--gray-300, #D0D5DD);
-  background: #fff;
-  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
-  padding: 0.625rem 0.875rem;
-  color: var(--neutral-color-neutral-70, #2F3A4C);
-  font-size: 0.875rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.75rem;
- }
-
- .bootstrap-tagsinput .tag.label.label-info{
-  display: inline-block;
-  background-color: #00AB55;
-  font-size: 12px;
-  color: #fff;
-  border-radius: 5px;
-  padding: 0px 6px;
- }
- .bootstrap-tagsinput input{
-  border: 0;
-  background-color: transparent;
- }
