--- a/public/latest/assets/admin-css/user.css
+++ b/public/latest/assets/admin-css/user.css
@@ -2708,7 +2708,7 @@ body{
 .modal-header-bg {
     width: 100%;
     height: 12px;
-    background: linear-gradient(269.44deg, #006AFA 2.3%, #00AE86 99.19%);
+    background: #006AFA;
 }
 .cropImageModal .modal-dialog{
     max-width: 750px;
@@ -2718,6 +2718,18 @@ body{
 .up-photo-title{
     padding: 8px 15px;
     text-align: center;
+}
+
+.cropImageModal .modal-title{
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.imgpreviewPrf {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
 #upload-demo{
@@ -2762,6 +2774,9 @@ figure figcaption {
 .upload-action-btn {
     margin-top: 60px;
     padding-top: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .cr-slider::-webkit-slider-thumb {
