--- a/public/latest/assets/admin-css/admin-dark.css
+++ b/public/latest/assets/admin-css/admin-dark.css
@@ -599,11 +599,20 @@
   background-color: #171717 !important;
 }
 
-.dark-mode .emojionearea.form-control.chat-message-input-single.emojionearea-inline {
+.dark-mode .emojionearea.form-control.emojionearea-inline {
   border: 1px solid #101C2D !important;
   background: #0D0D0D !important;
   box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05) !important;
   color: #fff !important;
+}
+
+.dark-mode .banner-size-modal .modal-content .cr-slider{
+  border-color: #A6B1C4!important;
+}
+.dark-mode .banner-size-modal .modal-content{
+  border: 1px solid #101C2D !important;
+  background: #0D0D0D !important;
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05) !important;
 }
 
 .dark-mode .custom-modal-box .modal-content {
