login bg image remove done

--- a/public/latest/assets/admin-css/user.css
+++ b/public/latest/assets/admin-css/user.css
@@ -2734,6 +2734,7 @@ body{
   padding: 8px; */
 }
 
+
 #upload-demo{
     position: relative;
 	width: 100%;
@@ -2854,4 +2855,10 @@ figure figcaption {
 
 .banner-size-modal .form-submit-bttns{
   padding-bottom: 1.5rem;
+}
+
+.login-page-theme-box .media .full-page-preview img{
+  width: 90%!important;
+  height: 99%!important;
+  object-fit: cover!important;
 }
