--- a/public/latest/assets/auth-css/custom-login-2.css
+++ b/public/latest/assets/auth-css/custom-login-2.css
@@ -531,6 +531,23 @@ body.dark-mode .submit-button .btn-submit {
     box-shadow: 0px 4px 19px 0px rgba(119, 147, 65, 0.30)!important;
 }
 
+
+.remember-auth .form-check-input:checked {
+    background-color: #FF9D25!important;
+    border-color: #FF9D25!important;
+}
+.dark-mode .remember-auth .form-check-input{
+    background-color: transparent!important;
+    border: 1px solid #fff!important;
+}
+.dark-mode .remember-auth .form-check-input:checked {
+    background-color: #FF9D25!important;
+    border-color: #FF9D25!important;
+}
+
+body.dark-mode .submit-button .btn-submit.btn-2{
+    background-color: #FF9D25!important;
+}
 /* dark mode css end */
 
 
