--- a/public/latest/assets/homepage.css
+++ b/public/latest/assets/homepage.css
@@ -114,7 +114,7 @@ h6 {
 .navbar .navbar-brand img {
   width: 10rem;
   max-height: 3rem;
-  object-fit: cover;
+  object-fit: contain;
 }
 .navbar .navbar-nav .nav-item .nav-link {
   font-size: 1rem;
