--- a/public/latest/assets/admin-css/elearning.css
+++ b/public/latest/assets/admin-css/elearning.css
@@ -2822,3 +2822,7 @@ span.stripe-bg i {
   font-size: 19px;
   color: #2F3A4C!important;
 }
+
+.course-modules-boxx{
+  min-height: 320px!important;
+}
